--- a/src/components/accordion/structure.css
+++ b/src/components/accordion/structure.css
@@ -1,5 +1,4 @@
 @utility accordion-body {
-    padding-inline: 1rem;
     padding-bottom: 1rem;
     font-size: var(--text-base);
 }
@@ -7,16 +6,6 @@
 @utility accordion-flush {
     &:not([class*="accordion-body"] *) {
         border: none;
-    }
-
-    &>details>summary {
-        padding-inline: 0rem;
-        font-weight: normal;
-
-    }
-
-    &>details>[class*="accordion-body"] {
-        padding-inline: 0rem;
     }
 
     &>details:first-child {
